--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "research-helper",
+  "description": "Research Helper API",
+  "author": "Hunt Feng",
   "license": "MIT",
   "version": "1.0.0",
   "main": "dist/index.js",
@@ -14,5 +16,13 @@
     "@types/node": "^20.2.3",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ResearchHelper/research-helper-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ResearchHelper/research-helper-api/issues"
+  },
+  "homepage": "https://github.com/ResearchHelper/research-helper-api#readme"
 }
