--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Release
 on:
   push:
     branches:
@@ -7,7 +7,7 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
-  publish:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -16,9 +16,10 @@ jobs:
           node-version: 16
           cache: "yarn"
       - run: yarn install --frozen-lockfile
-      - name: Create Release Pull Request or Publish
+      - name: Create Release Pull Request or Release
         uses: changesets/action@v1
         with:
-          publish: yarn run build
+          release: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
