--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts",
-    "lint": "tsc"
+    "lint": "tsc",
+    "release": "yarn build && yarn changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
